tests/snapshots/insta_test__scopes-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: Int,
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a",
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\nint main() {\n int a;\n        {int *k;}\n        {int *i; {int k;}}\n        int c[2];\n    }\n",
                                            },
                                            pos: Position {
                                                n_char: 1,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Block(
                                    [
                                        Stmt {
                                            kind: Declare(
                                                Declaration {
                                                    ty_spec: Int,
                                                    init_declarator: Some(
                                                        InitDeclarator {
                                                            declarator: Declarator {
                                                                n_star: 1,
                                                                direct_declarator: Ident(
                                                                    "k",
                                                                ),
                                                            },
                                                            initializer: None,
                                                        },
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_info: FileInfo {
                                                            file_name: "not impl name.c",
                                                            src: "\nint main() {\n int a;\n        {int *k;}\n        {int *i; {int k;}}\n        int c[2];\n    }\n",
                                                        },
                                                        pos: Position {
                                                            n_char: 9,
                                                            n_line: 3,
                                                        },
                                                    },
                                                },
                                            ),
                                        },
                                    ],
                                ),
                            },
                            Stmt {
                                kind: Block(
                                    [
                                        Stmt {
                                            kind: Declare(
                                                Declaration {
                                                    ty_spec: Int,
                                                    init_declarator: Some(
                                                        InitDeclarator {
                                                            declarator: Declarator {
                                                                n_star: 1,
                                                                direct_declarator: Ident(
                                                                    "i",
                                                                ),
                                                            },
                                                            initializer: None,
                                                        },
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_info: FileInfo {
                                                            file_name: "not impl name.c",
                                                            src: "\nint main() {\n int a;\n        {int *k;}\n        {int *i; {int k;}}\n        int c[2];\n    }\n",
                                                        },
                                                        pos: Position {
                                                            n_char: 9,
                                                            n_line: 4,
                                                        },
                                                    },
                                                },
                                            ),
                                        },
                                        Stmt {
                                            kind: Block(
                                                [
                                                    Stmt {
                                                        kind: Declare(
                                                            Declaration {
                                                                ty_spec: Int,
                                                                init_declarator: Some(
                                                                    InitDeclarator {
                                                                        declarator: Declarator {
                                                                            n_star: 0,
                                                                            direct_declarator: Ident(
                                                                                "k",
                                                                            ),
                                                                        },
                                                                        initializer: None,
                                                                    },
                                                                ),
                                                                debug_info: DebugInfo {
                                                                    file_info: FileInfo {
                                                                        file_name: "not impl name.c",
                                                                        src: "\nint main() {\n int a;\n        {int *k;}\n        {int *i; {int k;}}\n        int c[2];\n    }\n",
                                                                    },
                                                                    pos: Position {
                                                                        n_char: 18,
                                                                        n_line: 4,
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                    },
                                                ],
                                            ),
                                        },
                                    ],
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: Int,
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Array(
                                                        Ident(
                                                            "c",
                                                        ),
                                                        Some(
                                                            Expr {
                                                                kind: Num(
                                                                    2,
                                                                ),
                                                                debug_info: DebugInfo {
                                                                    file_info: FileInfo {
                                                                        file_name: "not impl name.c",
                                                                        src: "\nint main() {\n int a;\n        {int *k;}\n        {int *i; {int k;}}\n        int c[2];\n    }\n",
                                                                    },
                                                                    pos: Position {
                                                                        n_char: 14,
                                                                        n_line: 5,
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\nint main() {\n int a;\n        {int *k;}\n        {int *i; {int k;}}\n        int c[2];\n    }\n",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 5,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "\nint main() {\n int a;\n        {int *k;}\n        {int *i; {int k;}}\n        int c[2];\n    }\n",
                },
                pos: Position {
                    n_char: 0,
                    n_line: 1,
                },
            },
        },
    ],
}
