tests/snapshots/insta_test__scopes-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func(
                    Base(
                        Int,
                    ),
                    [],
                ),
                name: "main",
                args: [],
                body: Block(
                    [
                        Block(
                            [],
                        ),
                        Block(
                            [
                                Block(
                                    [],
                                ),
                            ],
                        ),
                        Block(
                            [
                                Block(
                                    [],
                                ),
                                Block(
                                    [
                                        Block(
                                            [],
                                        ),
                                    ],
                                ),
                            ],
                        ),
                        Block(
                            [],
                        ),
                    ],
                ),
                stack_size: 16,
            },
        ),
    ],
}
