tests/snapshots/insta_test__size_of-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Int,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Num(
                                                                5,
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                                                },
                                                                pos: Position {
                                                                    n_char: 9,
                                                                    n_line: 2,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                            },
                                            pos: Position {
                                                n_char: 1,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Int,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "b",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: SizeOf(
                                                                Expr(
                                                                    Expr {
                                                                        kind: Ident(
                                                                            "a",
                                                                        ),
                                                                        debug_info: DebugInfo {
                                                                            file_info: FileInfo {
                                                                                file_name: "not impl name.c",
                                                                                src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                                                            },
                                                                            pos: Position {
                                                                                n_char: 17,
                                                                                n_line: 3,
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                                                },
                                                                pos: Position {
                                                                    n_char: 9,
                                                                    n_line: 3,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                            },
                                            pos: Position {
                                                n_char: 1,
                                                n_line: 3,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Int,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "c",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: SizeOf(
                                                                Type(
                                                                    TypeName {
                                                                        spec_quals: SpecQual(
                                                                            Int,
                                                                        ),
                                                                        abstract_declarator: Some(
                                                                            AbstractDeclarator {
                                                                                n_star: 0,
                                                                                direct_abstract_declarator: None,
                                                                            },
                                                                        ),
                                                                        debug_info: DebugInfo {
                                                                            file_info: FileInfo {
                                                                                file_name: "not impl name.c",
                                                                                src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                                                            },
                                                                            pos: Position {
                                                                                n_char: 17,
                                                                                n_line: 4,
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                                                },
                                                                pos: Position {
                                                                    n_char: 9,
                                                                    n_line: 4,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                            },
                                            pos: Position {
                                                n_char: 1,
                                                n_line: 4,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Int,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "d",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: SizeOf(
                                                                Type(
                                                                    TypeName {
                                                                        spec_quals: SpecQual(
                                                                            Int,
                                                                        ),
                                                                        abstract_declarator: Some(
                                                                            AbstractDeclarator {
                                                                                n_star: 1,
                                                                                direct_abstract_declarator: None,
                                                                            },
                                                                        ),
                                                                        debug_info: DebugInfo {
                                                                            file_info: FileInfo {
                                                                                file_name: "not impl name.c",
                                                                                src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                                                            },
                                                                            pos: Position {
                                                                                n_char: 17,
                                                                                n_line: 5,
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                                                },
                                                                pos: Position {
                                                                    n_char: 9,
                                                                    n_line: 5,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                                            },
                                            pos: Position {
                                                n_char: 1,
                                                n_line: 5,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "\nint main() {\n int a = 5;\n int b = sizeof (a);\n int c = sizeof (int);\n int d = sizeof (int*);\n }\n",
                },
                pos: Position {
                    n_char: 0,
                    n_line: 1,
                },
            },
        },
    ],
}
